--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -174,6 +174,19 @@ label {
     color: #ffffff;
 }
 
+.samazon-sidebar-category-label {
+    width: 156px;
+    height: 20px;
+    font-family: YuGo;
+    font-size: 13px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #191919;
+}
+
 .samazon-favorite-button {
     border-radius: 2px;
     border: solid 1px #0fbe9f;
