--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -201,3 +201,8 @@ label {
     cursor: pointer;
     cursor: hand;
 }
+
+.samazon-favorite-add-cart {
+    border-radius: 2px;
+    background-color: #0fbe9f;
+}
