--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -206,3 +206,11 @@ label {
     border-radius: 2px;
     background-color: #0fbe9f;
 }
+
+.review-score-color {
+    color: #0fbe9f;
+}
+
+.review-score-color:focus {
+    color: #0fbe9f;
+}
