--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -214,3 +214,25 @@ label {
 .review-score-color:focus {
     color: #0fbe9f;
 }
+
+.dashboard-edit-link {
+    font-family: YuGo;
+    font-size: 14px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #0fbe9f;
+}
+
+.dashboard-delete-link {
+    font-family: YuGo;
+    font-size: 14px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #666666;
+}
