--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -236,3 +236,15 @@ label {
     letter-spacing: normal;
     color: #666666;
 }
+
+.h-80 {
+    height: 80%!important;
+}
+
+.w-20 {
+    width: 20%!important;
+}
+
+.w-80 {
+    width: 80%!important;
+}
