--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -248,3 +248,8 @@ label {
 .w-80 {
     width: 80%!important;
 }
+
+.samazon-delete-submit-button {
+    border-radius: 2px;
+    background-color: #d94b0e;
+}
